# pennylane-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/pennylane_python/: __init__.py  client.py
src/pennylane_python/domain/: customer.py
src/pennylane_python/mappers/: customer_mapper.py
src/pennylane_python/transport/: http_client.py
tests/: test_client.py
tests/domain/: test_customer.py
tests/mappers/: test_customer_mapper.py
tests/transport/: test_http_client.py
