[tool.poetry]
name = "pennylane-python"
version = "0.1.0"
description = "Python for Pennylane"
authors = ["Samuel Martin <martin.sam@gmail.com>"]
readme = "README.md"

packages = [
    { include = "pennylane_python", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-cov = "^7.0"
ruff = "^0.12"
mypy = "^1.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"